--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "sanitize.css": "^13.0.0",
     "webpack": "^5.72.0"
   },
