--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "fix:all": "run-s fix:eslint fix:stylelint fix:prettier"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.17.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "1.7.0-rc.0",
+    "aws-amplify": "^4.3.22",
     "postcss": "^8.4.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
