--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,12 +1,14 @@
 {
   "auth": {
-    "datakwipreactapp9edabe95": {
+    "startervitereactts2272ca07": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
       "customAuth": false,
       "frontendAuthConfig": {
-        "socialProviders": [],
+        "socialProviders": [
+          "GOOGLE"
+        ],
         "usernameAttributes": [
           "EMAIL"
         ],
