--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "1.7.0-rc.0",
     "aws-amplify": "^4.3.22",
+    "axios": "^0.27.2",
     "postcss": "^8.4.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
